[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/table_data_editor/src/export_preview/export_preview.gd" id="1_iqbuq"]

[node name="export_preview" type="MarginContainer"]
editor_description = "导出预览"
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_iqbuq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 200

[node name="export_type" type="ItemList" parent="VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
item_0/text = "Normal"
item_1/text = "Head As Key"
item_2/text = "By Row"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.462745)
layout_mode = 2
text = "Sample data in the first few lines..."

[node name="head_as_key_panel" type="HFlowContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/VBoxContainer/head_as_key_panel"]
layout_mode = 2
tooltip_text = "作为 key 的行"
text = "Key Row: "

[node name="head_line_box" type="SpinBox" parent="VBoxContainer/HSplitContainer/VBoxContainer/head_as_key_panel"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "作为 key 的行"
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="text_box" type="TextEdit" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="compact" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "紧凑的格式导出，这样JSON会占用空间会最小。数据量不是非常大可以不用勾选"
text = "compact"

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="export" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Export"

[node name="Control3" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="save_dialog" type="FileDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(343, 159)
filters = PackedStringArray("*.json; JSON")

[connection signal="item_selected" from="VBoxContainer/HSplitContainer/export_type" to="." method="_on_export_type_item_selected"]
[connection signal="value_changed" from="VBoxContainer/HSplitContainer/VBoxContainer/head_as_key_panel/head_line_box" to="." method="_on_head_line_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/export" to="." method="_on_export_pressed"]
[connection signal="file_selected" from="save_dialog" to="." method="_on_save_dialog_file_selected"]
